--- a/todo
+++ b/todo
@@ -19,4 +19,6 @@
 [x] Save room code in local storage
 [ ] Blue colors
 
+[ ] Share dialog (android) https://chodounsky.net/2019/03/24/progressive-web-application-as-a-share-option-in-android/
+
 
