--- a/todo
+++ b/todo
@@ -8,7 +8,6 @@
     [x] bump videos
     [/] remove video from queue if owner
 
-
 [x] Spotify support
     [x] Link spotify account
     [x] Search spotify
@@ -18,12 +17,14 @@
 [x] Fix token swapping 
 [x] Save room code in local storage
 
-[ ] Refresh tokens
-    [ ] Send host new key on each update of access token
-    [ ] Keep track on age of access_token and update it if it's under 1 hour 
+[x] Refresh tokens
+    [x] Send host new key on each update of access token
+    [x] Keep track on age of access_token and update it if it's under 1 hour 
 
-[ ] Stabilize platform
-[ ] Optimize network, only send updated keys in room
+[x] Stabilize platform
+[x] Optimize network, only send updated keys in room
+
+[x] Show user feedback when adding item to queue (change color of add button)
 
 [ ] Gradient color background flow effect for songs and possibly menu
 [ ] Display room code at all times (or only on songs, at least in client app)
@@ -31,8 +32,12 @@
 [ ] Youtube title errors (')
 
 [ ] iPhone css fixed css
-[ ] iPhone PWA improvements
-[ ] Blue colors
+[x] iPhone PWA improvements
+[x] Blue colors
 [ ] Share dialog (android) https://chodounsky.net/2019/03/24/progressive-web-application-as-a-share-option-in-android/
 
 
+~ BUGS ~
+
+ - Adding something to the queue (video) is triggering two updates 
+ - type of undefined ? rad: 149 > if (this.queue[0].type == "song" && this.queue[!!!!!1!!!!].type
