--- a/todo
+++ b/todo
@@ -26,20 +26,25 @@
 
 [x] Show user feedback when adding item to queue (change color of add button)
 
-[>] Gradient color background flow effect for songs and possibly menu
-[ ] Display room code at all times (or only on songs, at least in client app)
+[x] Gradient color background flow effect for songs and possibly menu
+[x] Display room code at all times (or only on songs)
 
-[ ] Search UI and Queue UI fix
-[ ] Youtube title errors (')
+[>] Search UI and Queue UI fix
 
-[ ] iPhone css fixed css
+[x] iPhone css fixed css
 [x] iPhone PWA improvements
 [x] Blue colors
+[x] Generate options.json and beautify it
+
+
+[ ] Swipe up to close / open media controlls
+[ ] Better search/queue UI
+[ ] Better look to search results (blur, gradient)
 [ ] Share dialog (android) https://chodounsky.net/2019/03/24/progressive-web-application-as-a-share-option-in-android/
-[ ] Generate options.json and beautify it
 
 
 ~ BUGS ~
  - PRIO: Skipping fast skips too many songs on spotify triggered by ended event from host!!!
  - Change scene not updaing background colors (gradient)
  - Adding something to the queue (video) is triggering two updates 
+ - Youtube title errors (')
