--- a/todo
+++ b/todo
@@ -29,7 +29,7 @@
 [x] Gradient color background flow effect for songs and possibly menu
 [x] Display room code at all times (or only on songs)
 
-[>] Search UI and Queue UI fix
+[x] Search UI and Queue UI fix
 
 [x] iPhone css fixed css
 [x] iPhone PWA improvements
@@ -38,6 +38,7 @@
 
 
 [x] Better look to search results (blur, gradient)
+[x] Color match background for phones
 [ ] Swipe up to close / open media controlls
 [ ] Share dialog (android) https://chodounsky.net/2019/03/24/progressive-web-application-as-a-share-option-in-android/
 
